Remove sprites and add imacss to give each class a base64 background image

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "currency-flags",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Flags for currency codes.",
   "files": [
     "dist/currency-flags.css",
@@ -8,10 +8,11 @@
   ],
   "scripts": {
     "start": "npm run build --silent",
-    "build": "npm run minify-images && npm run create-sprite && npm run minify-css && rm -rf build && echo 'Done.'",
-	"minify-images": "imagemin src/flags/* build",
-    "create-sprite": "sprity create 'dist' 'build/*.png' --style 'currency-flags.css' --margin 0 --base64 --prefix 'currency-flag'",
-    "minify-css": "cleancss -o dist/currency-flags.min.css dist/currency-flags.css"
+    "build": "npm run minify-images && npm run inline-images && npm run change-class-names && npm run minify-css && rm -rf build && echo 'Done.'",
+    "minify-images": "imagemin 'src/flags/*' build",
+    "inline-images": "imacss 'build/*.png' > 'dist/currency-flags.css'",
+	"change-class-names": "sed -i '' 's/imacss/currency-flag/g' 'dist/currency-flags.css'",
+    "minify-css": "cleancss -o 'dist/currency-flags.min.css' 'dist/currency-flags.css'"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "clean-css": "^3.4.12",
-    "imagemin-cli": "^2.1.0",
-    "sprity-cli": "^1.0.1"
+    "imacss": "^1.0.0",
+    "imagemin-cli": "^2.1.0"
   }
 }
