--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "currency-flags",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Flags for currency codes.",
   "files": [
     "dist/currency-flags.css",
@@ -8,10 +8,11 @@
   ],
   "scripts": {
     "start": "npm run build --silent",
-    "build": "npm run minify-images && npm run inline-images && npm run change-class-names && npm run minify-css && rm -rf build && echo 'Done.'",
-    "minify-images": "imagemin 'src/flags/*' build",
-    "inline-images": "imacss 'build/*.png' > 'dist/currency-flags.css'",
-	"change-class-names": "sed -i '' 's/imacss/currency-flag/g' 'dist/currency-flags.css'",
+    "build": "npm run minify-images && npm run inline-images && npm run change-class-names && npm run add-default-styles && npm run minify-css && rm -rf build && echo 'Done.'",
+    "minify-images": "imagemin 'src/flags/*' 'build/flags'",
+    "inline-images": "imacss 'build/flags/*.png' > 'build/currency-flags-backgrounds.css'",
+	"change-class-names": "sed -i '' 's/imacss/currency-flag/g' 'build/currency-flags-backgrounds.css'",
+	"add-default-styles": "cat 'src/styles.css' 'build/currency-flags-backgrounds.css' > 'dist/currency-flags.css'",
     "minify-css": "cleancss -o 'dist/currency-flags.min.css' 'dist/currency-flags.css'"
   },
   "repository": {
